# aids-for-software-development

./: .gitignore  README.md  projects_for_github_to_upload
all-os/: docker_cmd.txt  git_cmd.txt
development/: cpp-usage-vs-code.txt  docker_cmd.txt  gcc-cmake-multiple-source-compilation.txt  git_cmd.txt  regex_cmd.txt  ros2-troubleshooting.txt
development/common/ros/ros2/: ros2-troubleshooting.txt
development/common/ros/ros_templates/ros1/: template_CMakeLists.txt  template_package.xml
development/common/ros/ros_templates/ros2/: template_CMakeLists.txt  template_name.launch.py
development/common/ros/templates/ros2/my_ros2_cpp_pkg/: CMakeLists.txt  package.xml
development/common/ros/templates/ros2/my_ros2_cpp_pkg/src/: main.cpp  my_custom_node.cpp
development/common/ros_templates/ros1/: template_name.launch
development/common/ros_templates/ros2/: node_oop_template.cpp  template_CMakeLists.txt  template_package.xml  template_setup.py
development/common/vs-code/: settings.json
development/for-linux/: config-gvim-yavide.txt
development/for-linux/sublime-text/config/User/: C++ Execution.sublime-build  C.sublime-settings  Modern C++.sublime-build  Python3.8.sublime-build  Terminus.sublime-settings
development/for-linux/sublime-text/config/themes/: C-C++.tmTheme  style.txt
development/for-linux/sublime-text/for-development/: sublime-c++17-config.txt
development/for-linux/vim/config/: .gvimrc  colorscheme-setup.txt  init-setup.txt
development/for-linux/vim/config/colors/: simple-dark.vim  xcodedarkhc.vim  xcodelight.vim
development/for-linux/vim/for-development/: cpp-config.txt
development/ros/: ros2-troubleshooting.txt
development/ros/templates/ros2/: ros2_action_client_template_.cpp  ros2_action_server_template.cpp  ros2_node_template.cpp  ros2_service_client_template.cpp  ros2_service_server_template.cpp
development/ros/templates/ros2/tested_on_humble/: package_organization.txt
development/ros/templates/ros2/tested_on_humble/my_custom_msgs_srvs_actions/: CMakeLists.txt  package.xml
development/ros/templates/ros2/tested_on_humble/my_custom_msgs_srvs_actions/action/: CountUntil.action
development/ros/templates/ros2/tested_on_humble/my_custom_msgs_srvs_actions/msg/: CustomMessage.msg
development/ros/templates/ros2/tested_on_humble/my_custom_msgs_srvs_actions/srv/: CustomService.srv
development/ros/templates/ros2/tested_on_humble/my_ros2_cpp_pkg/: CMakeLists.txt  package.xml
development/ros/templates/ros2/tested_on_humble/my_ros2_cpp_pkg/include/my_ros2_cpp_pkg/: my_custom_node.hpp
linux-os/: useful_linux_cmd.txt
linux-os/config/: linux-cl-solutions.txt
linux-os/config/terminator/: terminator-config.txt
linux-os/deploy/python/: README.md  setup.py
linux-os/deploy/python/cvlib/: requirements.txt
linux-os/deploy/python/cvlib.egg-info/: PKG-INFO  SOURCES.txt
linux-os/deploy/python/cvlib/test_py/: test_cv.py
linux-os/editors/sublime-text/config/: Terminus.sublime-settings
linux-os/editors/sublime-text/development/: cmake-c++.txt  config-sublime-python.txt
linux-os/editors/vim/: vim-important-links.txt
linux-os/editors/vim/config/: .vimrc  init.vim
linux-os/editors/vs-code/: Makefile
os/linux-os/: linux_troubleshooting.txt  useful_linux_cmd.txt
win-os/editors/sublime-text/: Modern-C++.sublime-build
win-os/editors/vs-code/config/: cpp-usage-vs-code.txt
(+31 files in other folders)
